# Learning-OpenGL

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
Assets/: shaderCode.txt
Assets/Barrel/: barrel.mtl
Assets/Shaders/: Common.frag  LightingShader.frag  Material.frag  axisShader.frag  axisShader.vert  lightShader.frag  lightShader.vert  shader.frag  shader.vert
Assets/Shaders/Includes/: Lighting.frag
Assets/Shaders/Includes/Default/: Default.frag  Default.vert
Docs/: Framework.md  Note.md  Notes.md
GitHooks/: pre-commit  pre-commit.sh
Libraries/include/glad/: glad.h
Libraries/lib/: glad.c
Tests/: CMakeLists.txt  build-tests.sh
Tests/Math/: MathUtilsTests.cpp  Matrix2Tests.cpp  Matrix4Tests.cpp  Vector2Tests.cpp
Tests/MathTests/: MathUtilsTests.cpp  Matrix2Tests.cpp  Matrix4Tests.cpp  Vector2Tests.cpp  Vector3Tests.cpp
src/: Main.cpp  OpenGL.cpp  OpenGL.h  main.cpp  math.ixx  pch.hpp  test.cppm  test.ixx
src/Core/: CMakeLists.txt  Core.h  Core.hpp  Engine.cpp  Engine.cppm  Engine.hpp  Entity.hpp  EventBus.hpp  Main.cpp  Module.cppm  Module.hpp  ModuleStore.hpp  Resource.hpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  Services.cpp  Services.hpp  System.hpp  Window.cpp  Window.cppm  Window.hpp  World.cpp  World.hpp
src/Core/InnerCore/: Engine.cpp  Engine.hpp  Module.cpp  Module.hpp  SystemOwner.hpp  Window.cpp  Window.hpp  World.cpp  World.hpp
src/Core/OuterCore/: Entity.cpp  Entity.hpp  Resource.hpp  Scene.cpp  Scene.hpp  Service.hpp  ServiceStore.cpp  ServiceStore.hpp  System.hpp
src/Core/OuterCore/DirtySystem/: Dirty.hpp
src/Core/OuterCore/ECS/: Entity.cpp
src/Core/Services/: DirtyStore.hpp  EventBus.cpp  EventBus.hpp  ResourceManager.cpp  ResourceManager.hpp
src/Depth/: Depth.h
src/Engine/: Engine.cpp  Engine.h  Window.cpp
src/FileSystem/: FileSystem.cpp  FileSystem.h
src/Image/: Image.cpp  Image.h
src/Math/: CMakeLists.txt  Math.h  MathUtils.cpp  MathUtils.h  Matrix.h  Matrix2.cpp  Matrix3.cpp  Matrix4.cpp  Utils.cpp  Utils.h  Vector.h  Vector2.cpp  Vector3.cpp  Vector4.cpp
src/Math/Matrix/: Matrix.h  Matrix2.cpp  Matrix3.cpp  Matrix4.cpp
src/Math/Vector/: Vector.h  Vector2.cpp  Vector3.cpp  Vector4.cpp
src/Modules/: CMakeLists.txt
src/Modules/Input/: Input.cpp  Input.cppm  Input.h  Input.hpp  Keys.hpp  Mouse.hpp
src/Modules/Input/Enums/: Mouse.hpp
src/Modules/Profiling/: Profiling.cpp  Profiling.hpp
src/Modules/Renderer/: Camera.cpp  Camera.hpp  LightType.hpp  Material.cpp  Material.cppm  Material.hpp  Mesh.cpp  Mesh.cppm  Mesh.hpp  Object.cpp  Renderer.cpp  Renderer.cppm  Renderer.h  Renderer.hpp  Shader.cpp  Shader.cppm  Shader.hpp  Texture.cpp  Texture.cppm  Texture.hpp  Topology.hpp  Uniform.hpp  Vertex.cpp  Vertex.cppm  Vertex.hpp
src/Modules/Renderer/Components/: CameraComponent.hpp  LightComponent.hpp  MaterialComponent.hpp  MeshComponent.hpp  Transform3DComponent.hpp  TransformComponent.hpp
src/Modules/Renderer/Entities/: Camera.hpp  Cube.hpp  Light.hpp
src/Modules/Renderer/Enums/: ShaderStage.hpp
src/Modules/Renderer/Primitives/: Cube.cpp  Primitives.hpp  Textures.cpp
src/Modules/Renderer/Primitives/Meshes/: Cube.cpp  Line.cpp  Quad.cpp  UVSphere.cpp
src/Modules/Renderer/Resources/: Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  ShaderSource.cpp  ShaderSource.hpp  Texture.cpp  Texture.hpp
src/Modules/Renderer/Systems/: CameraSystem.cpp  CameraSystem.hpp  LightingSystem.cpp  LightingSystem.hpp
src/Modules/Renderer/Uniforms/: BoolUniform.hpp  FloatUniform.hpp  IntUniform.hpp  Matrix3Uniform.hpp  Matrix4Uniform.hpp  Vector2Uniform.hpp  Vector3Uniform.hpp  Vector4Uniform.hpp
src/Modules/ResourceManager/: ResourceManager.cpp  ResourceManager.hpp
src/Renderer/: CMakeLists.txt  Geometry.cpp  Material.cpp  Mesh.cpp  Object.cpp  Renderer.h  Shader.cpp  Texture.cpp  Vertex.cpp
src/Services/: CMakeLists.txt  LoggerService.h  Service.h
src/Shaders/: shader.frag  shader.vert
src/Tests/: CMakeLists.txt  TestMain.cpp  Vector2Tests.cpp
src/Tests/Math/: BasisTests.cpp  ColorTests.cpp  Matrix3Tests.cpp  Matrix4Tests.cpp  Vector4Tests.cpp
src/Utilities/: CMakeLists.txt  CheckedPtr.hpp  Dirty.hpp  IDirty.hpp  Logger.hpp  SafePtr.hpp
src/Utilities/FileSystem/: FileSystem.cpp  FileSystem.cppm  FileSystem.h  FileSystem.hpp
src/Utilities/Image/: Image.cpp  Image.cppm  Image.hpp
src/Utilities/Math/: Basis.cpp  Basis.hpp  Color.hpp  Math.cppm  Math.hpp  MathUtils.cpp  MathUtils.cppm  MathUtils.hpp  Quaternion.cpp  Quaternion.hpp
src/Utilities/Math/Matrix/: Matrix.hpp  Matrix2.cpp  Matrix2.cppm  Matrix2.hpp  Matrix3.cpp  Matrix3.cppm  Matrix3.hpp  Matrix4.cpp  Matrix4.cppm  Matrix4.hpp
src/Utilities/Math/Vector/: Vector2.cpp  Vector2.cppm  Vector2.hpp  Vector3.cpp  Vector3.cppm  Vector3.hpp  Vector4.cpp  Vector4.cppm  Vector4.hpp
src/Utilities/Services/: LoggerService.cppm  LoggerService.hpp
src/World/: CMakeLists.txt  Component.cpp  Entity.hpp  Object.cpp  Object.hpp  World.cpp  World.cppm  World.h  World.hpp
src/World/Components/: Transform3DComponent.hpp
src/World/Entities/: Axis.hpp
src/World/Events/: EntityCreated.hpp  EntityDestroyed.hpp
src/World/Novas/: Camera.hpp  Light.hpp  MeshInstance3D.hpp  Nova.hpp  Nova3D.hpp
src/World/Scenes/: AssimpScene.cpp  AssimpScene.hpp  CoordinateAxesScene.cpp  CoordinateAxesScene.hpp  FirstScene.cpp  FirstScene.hpp
src/World/Systems/: TransformSystem.cpp  TransformSystem.hpp
